--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ install:
 script:
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - cmake -std=gnu++11 -DCMAKE_CXX_COMPILER=$COMPILER .. && make
   - ./homeworks/03-strings-loops-functions-dna-test/dna_test -s
