Homework 5 starter files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(01-basics)
 include_directories(homeworks/03-strings-loops-functions-dna)
 include_directories(homeworks/04-vectors)
 include_directories(assignments/05-classes)
+include_directories(homeworks/05-classes)
 
 add_subdirectory(01-basics)
 add_subdirectory(01-basics_test)
